--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
 RUN rm -rf /usr/share/nginx/html/index.html
-ADD https://github.com/daws-78s/dockerfiles/blob/main/COPY/index.html /usr/share/nginx/html
+ADD https://raw.githubusercontent.com/daws-78s/notes/main/session-01.txt /tmp/session-01.txt
 CMD [ "nginx" , "-g" , "daemon off;"]
