--- a/ADD/Dockerfile
+++ b/ADD/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx
-RUN rm -rf /usr/share/nginx/html/index.html
+# RUN rm -rf /usr/share/nginx/html/index.html
 ADD https://raw.githubusercontent.com/daws-78s/notes/main/session-01.txt /tmp/session-01.txt
 CMD [ "nginx" , "-g" , "daemon off;"]
