--- a/ENTRYPOINT/Dockerfile
+++ b/ENTRYPOINT/Dockerfile
@@ -1,3 +1,5 @@
 FROM almalinux:9
-ENTRYPOINT ["ping", "google.com"]
+CMD ["ping", "google.com"]
+# ENTRYPOINT ["ping", "google.com"]
+
 # CMD ["sleep", "100" ]
