--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx
 WORKDIR /usr/share/nginx/html/
-RUN echo "<h1> this is from workdir </h1>" > index.html
+RUN echo " this is from workdir" > index.html
 RUN pwd
-CMD ["nginx", "-g", "daemon off; "]
+CMD ["nginx", "-g", "daemon off;"]
 
 
